# py-responsiveimage

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/responsiveimage/: __init__.py  __main__.py  argsResponsiveImage.py  copy_image.py  create.py  exif.py  gif.py  jpg.py  misc.py  mp4.py  pil_image.py  png.py  webp.py
tests/: crop.py  export_to_webp.py  getresdir.py  mp4.py  png.py
