[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"


[project]
  name = "responsiveimage"
  description = "Create different scaled versions of an image, in webp, jpg, png, svg,... to be used on responsive website"
  version = "1.7.0"
  authors = [
    { name="Pascal Brand", email="pascal.brand38@gmail.com" },
  ]
  readme = "README.md"
  requires-python = ">=3.8"     # as Pillow requires >= 3.8
  classifiers = [
      "Programming Language :: Python :: 3",
      "Operating System :: OS Independent",
  ]
  dependencies = [
    'Pillow',
    'filetype',
  ]


[project.urls]
  "Homepage" = "https://github.com/pascal-brand38/py-responsiveimage"
  "Bug Tracker" = "https://github.com/pascal-brand38/py-responsiveimage/issues"

# https://stackoverflow.com/questions/10253826/path-issue-with-pytest-importerror-no-module-named
[tool.pytest.ini_options]
  pythonpath = [
    "src"
  ]
